tests/js_error/source_locations/expression/unary/neg.exp
TypeError: symbol cannot be converted to number
  ┌ tests/js_error/source_locations/expression/unary/neg.js:1:1
  |
1 | -Symbol.iterator;
  | ^
Stack trace:
  at <global> (tests/js_error/source_locations/expression/unary/neg.js:1:1)